# rina

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.arm64  README.md
src/: embed.rs  help.md  main.rs  playlist.rs
