[package]
name = "rina"
version = "0.1.0"
edition = "2021"

[profile.release]
# better link optimization, but slower builds
lto = true

[dependencies]
dotenvy = "0.15"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal", "sync"]

[dependencies.serenity]
version = "0.12"
features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
    "client",
]

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mpa", "isomp4", "alac"]
