[package]
name = "rina"
version = "0.8.0"
edition = "2021"

[profile.dev]
debug = false

[profile.release]
lto = "thin"

[dependencies]
reqwest = "0.11"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["aac", "mpa", "isomp4", "alac"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread", "signal", "sync"]

[dependencies.serenity]
version = "0.12.0"
features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
    "client",
]
