[package]
name = "rina"
version = "0.10.0"
edition = "2021"

[profile.dev]
debug = false

[profile.release]
lto = "thin"

[dependencies]
reqwest = "0.11"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["all"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt-multi-thread", "signal", "sync"]

[dependencies.serenity]
version = "0.12.0"
features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
    "client",
]
